--- a/template.html
+++ b/template.html
@@ -126,11 +126,6 @@
   </ul></li>
   </ul>
   </div>
-  <div id="block-block-10" class="block block-block odd">
-  
-        
-    <div class="foot-license"><a href="http://creativecommons.org/licenses/by-sa/3.0/tw/"><img src="sites/all/themes/cctw2013/images/cc-by-sa.png"></a>除另有註明，網站之內容皆採用 <br><a href="http://creativecommons.org/licenses/by-sa/3.0/tw/">創用CC 姓名標示-相同方式分享 3.0 台灣</a> 授權條款 </div>
-  </div>
   <div id="block-block-11" class="block block-block last even">
       </div>
       </div>
@@ -139,7 +134,9 @@
       <div id="block-block-25" class="block block-block first last odd">
   
         
-    <div class="cctwfoot">CC by-sa 4.0<a href="policies.html">使用條款</a></div>
+    <div class="cctwfoot">
+        <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="創用 CC 授權條款" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />本著作係採用<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">創用 CC 姓名標示-相同方式分享 4.0 國際 授權條款</a>授權.
+        <a href="policies.html">使用條款</a></div>
   
   </div>
     </div>
