--- a/template.html
+++ b/template.html
@@ -99,7 +99,7 @@
       <div id="block-block-1" class="block block-block first odd">
   
         
-    <div class="foot-follow"><h2 class="block__title">聯絡我們</h2>歡迎活動演講邀約及任何 CC 授權法律諮詢<br>詳情請參見此<a href="contact.html" target="_block"><b > 聯絡我們頁面 </b></a><br><!--地址:台北市南港區研究院路二段128號 <br>資訊科技創新研究中心 304室<br>--><br><a href="https://www.facebook.com/CCTaiwan" target="_black"><img src="sites/all/themes/cctw2013/images/facebook.png"></a>&nbsp;&nbsp;<a href="https://www.youtube.com/channel/UCFCAeOZAvfjI01jYAvUS6BQ" target="_black"><img src="sites/all/themes/cctw2013/images/youtub.png"></a>&nbsp;&nbsp;<a href="feed/blog"><img src="sites/all/themes/cctw2013/images/rss.png"></a></div>
+    <div class="foot-follow"><h2 class="block__title">聯絡我們</h2>歡迎活動演講邀約及任何 CC 授權法律諮詢<br>詳情請參見此<a href="contact.html" target="_block"><b > 聯絡我們頁面 </b></a><br><!--地址:台北市南港區研究院路二段128號 <br>資訊科技創新研究中心 304室<br>--><br><a href="https://www.facebook.com/CCTaiwan" target="_black"><img src="sites/all/themes/cctw2013/images/facebook.png"></a>&nbsp;&nbsp;<a href="https://www.youtube.com/channel/UCFCAeOZAvfjI01jYAvUS6BQ" target="_black"><img src="sites/all/themes/cctw2013/images/youtub.png"></a>&nbsp;&nbsp;</div>
   </div>
   <div id="block-menu-menu-quicklinks" class="block block-menu even" role="navigation">
   
