--- a/template.html
+++ b/template.html
@@ -5,6 +5,7 @@
   <link rel="shortcut icon" href="sites/all/themes/cctw2016/favicon.ico" type="image/vnd.microsoft.icon" />
   <link rel="shortlink" href="node/2.html" />
   <link rel="canonical" href="about.html" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
   <link type="text/css" rel="stylesheet" href="sites/creativecommons.tw/files/css/css_lQaZfjVpwP_oGNqdtWCSpJT1EMqXdMiU84ekLLxQnc4.css" media="all" />
   <link type="text/css" rel="stylesheet" href="sites/creativecommons.tw/files/css/css_5hnYYOE5XkltW6cF3IHH909BcprCD6X0MWLdMjAjuiU.css" media="all" />
   <link type="text/css" rel="stylesheet" href="sites/creativecommons.tw/files/css/css_85iEcOFlKQd-H-S1fZVZ7XJcopLlazWMzpRSHQRsmlM.css" media="all" />
