--- a/template.html
+++ b/template.html
@@ -5,12 +5,13 @@
   <link rel="shortcut icon" href="sites/all/themes/cctw2016/favicon.ico" type="image/vnd.microsoft.icon" />
   <link rel="shortlink" href="node/2.html" />
   <link rel="canonical" href="about.html" />
+  <link rel="stylesheet" href="sites/creativecommons.tw/files/css/custom.css"
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
   <link type="text/css" rel="stylesheet" href="sites/creativecommons.tw/files/css/css_lQaZfjVpwP_oGNqdtWCSpJT1EMqXdMiU84ekLLxQnc4.css" media="all" />
   <link type="text/css" rel="stylesheet" href="sites/creativecommons.tw/files/css/css_5hnYYOE5XkltW6cF3IHH909BcprCD6X0MWLdMjAjuiU.css" media="all" />
   <link type="text/css" rel="stylesheet" href="sites/creativecommons.tw/files/css/css_85iEcOFlKQd-H-S1fZVZ7XJcopLlazWMzpRSHQRsmlM.css" media="all" />
   <link type="text/css" rel="stylesheet" href="sites/creativecommons.tw/files/css/css_z1oeDNwiYdrsVT1UKHIbCFoqpUDgkP6YlpixHLbxmfg.css" media="all" />
-    <script src="sites/creativecommons.tw/files/js/js_0gj6QcpfRH2jzTbCQqf7kEkm4MXY0UA_sRhwPc8jC1o.js"></script>
+  <script src="sites/creativecommons.tw/files/js/js_0gj6QcpfRH2jzTbCQqf7kEkm4MXY0UA_sRhwPc8jC1o.js"></script>
   <script src="sites/creativecommons.tw/files/js/js_9lwnnBd2U2EnWoWYICAlPh-LFE_WFEe5GjUBoGN02wc.js"></script>
   <script src="sites/creativecommons.tw/files/js/js_2OW9smDzq6Hssd0FDvQ664w9ArSoSOINoM7rtv681-0.js"></script>
   <script src="sites/creativecommons.tw/files/js/js_2t14JFxNsmXuSrBBKYsR5YNtLjOwu9qoZonh_BKtWb0.js"></script>
