--- a/template.html
+++ b/template.html
@@ -5,7 +5,7 @@
   <link rel="shortcut icon" href="sites/all/themes/cctw2016/favicon.ico" type="image/vnd.microsoft.icon" />
   <link rel="shortlink" href="node/2.html" />
   <link rel="canonical" href="about.html" />
-  <link rel="stylesheet" href="sites/creativecommons.tw/files/css/custom.css"
+  <link rel="stylesheet" href="sites/creativecommons.tw/files/css/custom.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
   <link type="text/css" rel="stylesheet" href="sites/creativecommons.tw/files/css/css_lQaZfjVpwP_oGNqdtWCSpJT1EMqXdMiU84ekLLxQnc4.css" media="all" />
   <link type="text/css" rel="stylesheet" href="sites/creativecommons.tw/files/css/css_5hnYYOE5XkltW6cF3IHH909BcprCD6X0MWLdMjAjuiU.css" media="all" />
@@ -137,7 +137,7 @@
   
         
     <div class="cctwfoot">
-        <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="創用 CC 授權條款" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />本著作係採用<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">創用 CC 姓名標示-相同方式分享 4.0 國際 授權條款</a>授權.
+        <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img id="licence_icon" alt="創用 CC 授權條款" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />本著作係採用<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">創用 CC 姓名標示-相同方式分享 4.0 國際 授權條款</a>授權.
         <a href="policies.html">使用條款</a></div>
   
   </div>
