--- a/files_club.html
+++ b/files_club.html
@@ -90,7 +90,7 @@
       </div>
       </div>
     </header>
-    <div class="card-deck">
+    <div class="card-deck container-card d-flex justify-content-around">
         <a href="#">
         <div class="card">
           <div class="card-header">
