--- a/template.html
+++ b/template.html
@@ -137,7 +137,7 @@
   
         
     <div class="cctwfoot">
-        <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img id="licence_icon" alt="創用 CC 授權條款" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />本著作係採用<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">創用 CC 姓名標示-相同方式分享 4.0 國際 授權條款</a>授權.
+        <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img id="licence_icon" alt="創用 CC 授權條款" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />本網站內容係採用<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">創用 CC 姓名標示-相同方式分享 4.0 國際 授權條款</a>授權.
         <a href="policies.html">使用條款</a></div>
   
   </div>
