Complete files club & update template page

--- a/downloads.html
+++ b/downloads.html
@@ -168,10 +168,10 @@ $(document).ready(function(){
           <tr class="row-3">
                   <td class="col-1 col-first">
               
-  <div class="views-field views-field-title">        <span class="field-content"><li><a href="sites/creativecommons.tw/files/download/Part_1-1.webm">創用 CC 示範教材 CCTW × OCF (影片) - 基礎建立1</a></li></span>  </div>          </td>
+  <div class="views-field views-field-title">        <span class="field-content"><li><a href="https://youtu.be/lyZWIuLdcbU">創用 CC 示範教材 CCTW × OCF (影片) - 基礎建立1</a></li></span>  </div>          </td>
                   <td class="col-2 col-last">
               
-  <div class="views-field views-field-title">        <span class="field-content"><li><a href="sites/creativecommons.tw/files/download/Part_1-2.webm">創用 CC 示範教材 CCTW × OCF (影片) - 基礎建立2</a></li></span>  </div>          </td>
+  <div class="views-field views-field-title">        <span class="field-content"><li><a href="https://youtu.be/zU5UqmeIwL0">創用 CC 示範教材 CCTW × OCF (影片) - 基礎建立2</a></li></span>  </div>          </td>
               </tr>
           <tr class="row-4">
                   <td class="col-1 col-first">
