--- a/files_club.html
+++ b/files_club.html
@@ -5,6 +5,7 @@
   <link rel="shortcut icon" href="sites/all/themes/cctw2016/favicon.ico" type="image/vnd.microsoft.icon" />
   <link rel="shortlink" href="node/2.html" />
   <link rel="canonical" href="about.html" />
+  <link rel="stylesheet"href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
   <link rel="stylesheet" href="sites/creativecommons.tw/files/css/custom.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
   <link type="text/css" rel="stylesheet" href="sites/creativecommons.tw/files/css/css_lQaZfjVpwP_oGNqdtWCSpJT1EMqXdMiU84ekLLxQnc4.css" media="all" />
@@ -90,8 +91,8 @@
       </div>
       </div>
     </header>
-    <div class="card-deck container-card d-flex justify-content-around">
-        <a href="#">
+    <div class="card-deck container-card d-flex justify-content-around animated bounceIn">
+        <a href="files_club_cc.html">
         <div class="card">
           <div class="card-header">
             台灣創用CC計畫
