--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ $(document).ready(function(){
   </header>
   <div class="main-container">
   <div class="main d-flex">
-    <img class="d-inline main-img col-8" src="/sites/creativecommons.tw/files/think_of_eco.jpg">
+    <img class="d-inline main-img col-8" src="sites/creativecommons.tw/files/think_of_eco.jpg">
     <div class="d-inline col-4 main-textblock">
       <p class="main-text">2003 年中研院將 Creative Commons 授權引進台灣
         ，成立台灣創用 CC 計畫，首要任務為創用 CC 授權的本地化工作，使其切合台灣
@@ -133,21 +133,21 @@ $(document).ready(function(){
   
   <div class="links d-inline-block align-top">
     <div class="icons d-inline-block">
-      <img src="/sites/creativecommons.tw/files/community_icon.svg">
+      <img src="sites/creativecommons.tw/files/community_icon.svg">
       <div class="description">
         <h4 class="text-center icon-title">招募社群成員與夥伴</h4>
         <p>台灣 CC 社群將在此萌芽，歡迎加入一同關心開放授權的發展</p>
       </div>
   </div>
   <div class="icons d-inline-block align-top">
-      <img src="/sites/creativecommons.tw/files/doc_icon.svg">
+      <img src="sites/creativecommons.tw/files/doc_icon.svg">
       <div class="description">
         <h4 class="text-center icon-title">線上影音教材</h4>
         <p>精彩生動的線上教材與影片，帶你簡單了解 CC 授權領域</p>
       </div>
   </div>
   <div class="icons d-inline-block align-top">
-      <img src="/sites/creativecommons.tw/files/speak_icon.svg">
+      <img src="sites/creativecommons.tw/files/speak_icon.svg">
       <div class="description">
         <h4 class="text-center icon-title">演講邀約</h4>
         <p>我們可以協助幫您接洽合適的 CC 社群講師我們可以協助幫您接洽合適的 CC 社群講師</p>
