Rename file club

--- a/files_club.html
+++ b/files_club.html
@@ -87,32 +87,86 @@
   </ul>
   </div>
     </div>
+  
       </div>
       </div>
+  
       </div>
     </header>
-    <div class="card-deck container-card d-flex justify-content-around animated bounceIn">
-        <a href="files_club_cc.html">
-        <div class="card">
-          <div class="card-header">
-            台灣創用CC計畫
-          </div>
-          <div class="card-body">
-            Text
-          </div>
-        </div>
-        </a>
-        <a href="https://ti-wb.github.io/pd4pd.tw/">
+  <div>
+      <h1 class="title">台灣創用CC計畫</h1>
+  </div>
+  <div class="card-deck animated bounceIn">
+      <a href="blog.1.html">
           <div class="card">
-            <div class="card-header">
-              公眾領域
-            </div>
-            <div class="card-body">
-              Text
-            </div>
+              <div class="card-body">
+                  CC小誌
+              </div>
           </div>
-        </a>
+      </a>
+      <a href="feature.html">
+        <div class="card">
+            <div class="card-body">
+                特別企劃
+            </div>
         </div>
+    </a>
+    <a href="#">
+        <div class="card">
+            <img class="card-img-top" src="sites/creativecommons.tw/files/Publicher.png">
+            <div class="card-body card-img-overlay">
+                出版品
+            </div>
+        </div>
+    </a>
+  </div>
+  <div class="card-deck animated bounceIn">
+    <a href="in-depth.html">
+        <div class="card">
+            <div class="card-body">
+                CC專題
+            </div>
+        </div>
+    </a>
+    <a href="newsletter.html">
+      <div class="card">
+          <div class="card-body">
+              CC報報
+          </div>
+      </div>
+  </a>
+  <a href="twcc.html">
+      <div class="card">
+          <div class="card-body">
+              關於創用CC計畫
+          </div>
+      </div>
+  </a>
+</div>
+<div class="card-deck animated bounceIn">
+    <a href="#">
+        <div class="card">
+            <div class="card-body">
+                Open Design
+            </div>
+        </div>
+    </a>
+    <a href="#">
+      <div class="card">
+          <div class="card-body">
+              Open Design
+          </div>
+      </div>
+  </a>
+  <a href="#">
+      <div class="card">
+          <div class="card-body">
+              Open Design
+          </div>
+      </div>
+  </a>
+</div>
+
 
   
     <footer id="footer" class="region region-footer">
@@ -157,7 +211,7 @@
   
         
     <div class="cctwfoot">
-        <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img id="licence_icon" alt="創用 CC 授權條款" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />本著作係採用<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">創用 CC 姓名標示-相同方式分享 4.0 國際 授權條款</a>授權.
+        <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img id="licence_icon" alt="創用 CC 授權條款" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />本網站內容係採用<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">創用 CC 姓名標示-相同方式分享 4.0 國際 授權條款</a>授權.
         <a href="policies.html">使用條款</a></div>
   
   </div>
