--- a/index.html
+++ b/index.html
@@ -127,8 +127,19 @@ $(document).ready(function(){
     </div>
   </div>
   <div class="d-flex clearfix main-bottom">
-  <div class="iframe d-inline-block" frameborder="0">
-    <iframe src="https://groups.google.com/forum/feed/cctw-discussion/topics/rss.xml?num=10"></iframe>
+  <div class="iframe d-inline-block">
+    <h4 class="rss-title"><a href="https://groups.google.com/forum/#!forum/cctw-discussion" target="_blank">CC 社群授權討論室</a></h4>
+    <p class="rss-description">此為公開論壇，可先閱讀或搜尋論壇上過去的討論串，看是否有與您相似的問題，
+      若還有其他問題，可直接在論壇發問，熱心的社群成員們會一同參與討論與分享。
+    </p>
+    <ul>
+      <li>關於「轉載」使用條件問題</li>
+      <li>請問【改作】之侵犯著作財產權的問題</li>
+      <li>使用CC0是否仍需有舉證考量的先行準備?</li>
+      <li>非商業用紀錄片cc音樂使用權限</li>
+      <li>關於「相同方式分享」的作品使用</li>
+      <li>請問CC使用在影片</li>
+    </ul>
   </div>
   
   <div class="links d-inline-block align-top">
@@ -166,7 +177,7 @@ $(document).ready(function(){
   <div id="block-block-1" class="block block-block first odd">
 
     
-<div class="foot-follow"><h2 class="block__title">聯絡我們</h2>歡迎活動演講邀約及任何 CC 授權法律諮詢<br>詳情請參見此<a href="contact.html" target="_block"><b > 聯絡我們頁面 </b></a><br><!--地址:台北市南港區研究院路二段128號 <br>資訊科技創新研究中心 304室<br>--><br><a href="https://www.facebook.com/CCTaiwan" target="_black"><img src="sites/all/themes/cctw2013/images/facebook.png"></a>&nbsp;&nbsp;<a href="https://www.youtube.com/channel/UCFCAeOZAvfjI01jYAvUS6BQ" target="_black"><img src="sites/all/themes/cctw2013/images/youtub.png"></a>&nbsp;&nbsp;</div>
+<div class="foot-follow"><h2 class="block__title">聯絡我們</h2>歡迎活動演講邀約及任何 CC 授權法律諮詢<br>詳情請參見此<a href="contact.html" target="_block"><b > 聯絡我們頁面 </b></a><br><!--地址:台北市南港區研究院路二段128號 <br>資訊科技創新研究中心 304室<br>--><br></div>
 </div>
 <div id="block-menu-menu-quicklinks" class="block block-menu even" role="navigation">
 
