--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ $(document).ready(function(){
   
   
 
-<footer id="footer" class="region region-footer">
+<footer id="footer" class="region region-footer footer">
   <div class="wrapper">
   <div id="page">
   <div id="block-block-1" class="block block-block first odd">
