--- a/files_club.html
+++ b/files_club.html
@@ -87,20 +87,16 @@
   </ul>
   </div>
     </div>
-  
-      </div>
-      </div>
-  
-      </div>
     </header>
   <div>
-      <h1 class="title">台灣創用CC計畫</h1>
+      <h1 class="title">台灣創用 CC 計畫 - 檔案館</h1>
+      <h3 align="center">檔案館留存的內容是中央研究院資訊科技創新研究中心「台灣創用 CC 計畫」過去的成果資料，</br>採用創用CC 姓名標示-相同方式分享 3.0 台灣授權條款，歡迎到這裡搜尋想要的資源。</h3>
   </div>
   <div class="card-deck animated bounceIn">
       <a href="blog.1.html">
           <div class="card">
               <div class="card-body">
-                  CC小誌
+                  CC 小誌
               </div>
           </div>
       </a>
@@ -111,11 +107,11 @@
             </div>
         </div>
     </a>
-    <a href="#">
+    <a href="news.html">
         <div class="card">
             <img class="card-img-top" src="sites/creativecommons.tw/files/Publicher.png">
             <div class="card-body card-img-overlay">
-                出版品
+                舊聞新知
             </div>
         </div>
     </a>
@@ -124,44 +120,39 @@
     <a href="in-depth.html">
         <div class="card">
             <div class="card-body">
-                CC專題
+                CC 專題
             </div>
         </div>
     </a>
     <a href="newsletter.html">
       <div class="card">
           <div class="card-body">
-              CC報報
+              CC 報報
           </div>
       </div>
   </a>
   <a href="twcc.html">
       <div class="card">
           <div class="card-body">
-              關於創用CC計畫
+              關於台灣創用 CC 計畫
           </div>
       </div>
   </a>
 </div>
 <div class="card-deck animated bounceIn">
-    <a href="#">
+    <a href="downloads_old.html">
         <div class="card">
-            <div class="card-body">
-                Open Design
+            <img class="card-img-top" src="sites/creativecommons.tw/files/Publicher.png">
+            <div class="card-body card-img-overlay">
+                過往出版品 / 下載
             </div>
         </div>
     </a>
-    <a href="#">
+    <a href="../pd4pd.tw">
       <div class="card">
-          <div class="card-body">
-              Open Design
-          </div>
-      </div>
-  </a>
-  <a href="#">
-      <div class="card">
-          <div class="card-body">
-              Open Design
+            <img class="card-img-top" src="sites/creativecommons.tw/files/pd4pd.png">
+            <div class="card-body card-img-overlay">
+              公眾領域 PD4PD
           </div>
       </div>
   </a>
