--- a/policies.html
+++ b/policies.html
@@ -130,7 +130,10 @@ $(document).ready(function(){
       
           </header>
   
-  <div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><p>本網站由台灣創用CC計畫建置，網站內容供公眾使用，但依下述使用條款規範。</p><h3>定義</h3><dl><dt>Creative Commons</dt><dd>指稱美國 Creative Commons 此一非營利組織。</dd><dt>台灣「創用 CC」計畫</dt><dd>指稱 Creative Commons Taiwan 計畫，此計畫於中研院資創中心執行，與 Creative Commons 雙方簽有合作備忘錄。</dd><dt>創用 CC</dt><dd>指稱 Creative Commons 與台灣「創用CC計畫」所推展的理念。</dd><dt>創用 CC 授權</dt><dd>指稱由 Creative Commons 所提供的各項授權方式。</dd><dt>創用 CC 授權條款</dt><dd>指稱創用 CC 授權的實際條款。</dd></dl><h3>授權方式</h3><p>除另有載明外，所有在本網站上的內容均依&nbsp;<span style="color: #555555; line-height: 19px;"><a href="http://creativecommons.org/licenses/by-sa/3.0/tw/">創用CC 姓名標示-相同方式分享 3.0 台灣</a>&nbsp;</span>提供公眾使用。如果您合理地懷疑本網站上內容侵害您或實際著作權人的權利，請<a href="contact.html">與本網站聯繫</a>。</p><p>中研院資創中心及 Creative Commons均不對創用CC授權條款中的文字主張著作權。惟經過修改的授權條款版本，不得標示「創用CC」或 "Creative Commons"。</p><h3>免責聲明</h3><p>本網站提供與法律主題相關的一般性資訊，但不提供個別諮詢。台灣「創用 CC」計畫並非法律事務所，也不提供法律服務。使用本網站或寄送電子郵件給我們，並不會因此建立律師與客戶間的關係。台灣「創用 CC」計畫係以「現況」(as-is) 為基礎，提供此處的一般性法律資訊。台灣「創用 CC」計畫不擔保本網站所提供的一般性資訊，且不負責因使用該資訊而造成的損失。此外，台灣「創用 CC」計畫亦不提供有償的作品授權，也不協助收取權利金。</p><p>第三者就您的行為或疏忽所提出的任何主張、訴訟、損害賠償，與台灣「創用 CC」計畫無涉，您並同意採取一切措施以免除中研院資創中心及其相關人員之責任，必要時為之辯護並維持對之無惡意的態度。</p><p>您因從本網站下載資料而對您的電腦系統產生損害或造成資料的遺失，由您自行負擔責任，與台灣「創用 CC」計畫無涉。</p><h3></h3></div></div></div>  
+  <div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><p>本網站由開放文化基金會與 CC 台灣社群協力製作，除另有註明，網站之內容皆採用創用CC 姓名標示-相同方式分享 3.0 台灣 授權條款。
+  </br>
+  本站檔案室由台灣創用 CC 計畫製作，除另有註明，網站之內容皆採用
+  創用CC 姓名標示-相同方式分享 3.0 台灣 授權條款。 </div></div></div>  
 
 </article>
           </div>
