Add animation and change design for card

--- a/files_club.html
+++ b/files_club.html
@@ -96,14 +96,14 @@
       <a href="blog.1.html">
           <div class="card">
               <div class="card-body">
-                  CC 小誌
+                  <p>CC 小誌</p>
               </div>
           </div>
       </a>
       <a href="feature.html">
         <div class="card">
             <div class="card-body">
-                特別企劃
+                <p>特別企劃</p>
             </div>
         </div>
     </a>
@@ -111,7 +111,7 @@
         <div class="card">
             <img class="card-img-top" src="sites/creativecommons.tw/files/Publicher.png">
             <div class="card-body card-img-overlay">
-                舊聞新知
+                <p>舊聞新知</p>
             </div>
         </div>
     </a>
@@ -120,21 +120,21 @@
     <a href="in-depth.html">
         <div class="card">
             <div class="card-body">
-                CC 專題
+                <p>CC 專題</p>
             </div>
         </div>
     </a>
     <a href="newsletter.html">
       <div class="card">
           <div class="card-body">
-              CC 報報
+              <p>CC 報報</p>
           </div>
       </div>
   </a>
   <a href="twcc.html">
       <div class="card">
           <div class="card-body">
-              關於台灣創用 CC 計畫
+              <p>關於台灣創用 CC 計畫</p>
           </div>
       </div>
   </a>
@@ -144,7 +144,8 @@
         <div class="card">
             <img class="card-img-top" src="sites/creativecommons.tw/files/Publicher.png">
             <div class="card-body card-img-overlay">
-                過往出版品 / 下載
+                <div class="card-black"></div>
+                <p>過往出版品 / 下載</p>
             </div>
         </div>
     </a>
@@ -152,7 +153,7 @@
       <div class="card">
             <img class="card-img-top" src="sites/creativecommons.tw/files/pd4pd.png">
             <div class="card-body card-img-overlay">
-              公眾領域 PD4PD
+              <p>公眾領域 PD4PD</p>
           </div>
       </div>
   </a>
