--- a/index.html
+++ b/index.html
@@ -117,13 +117,7 @@ $(document).ready(function(){
   <div class="main d-flex">
     <img class="d-inline main-img col-8" src="sites/creativecommons.tw/files/think_of_eco.jpg">
     <div class="d-inline col-4 main-textblock">
-      <p class="main-text">2003 年中研院將 Creative Commons 授權引進台灣
-        ，成立台灣創用 CC 計畫，首要任務為創用 CC 授權的本地化工作，使其切合台灣
-        著作權法的用語，計劃範疇包含基礎建設、授權諮詢、合作推廣與國際交流。2017
-        年原台灣創用 CC 計畫完成階段性任務，適逢非營利組織 Creative Commons
-        改變與全球網絡的合作型態，未來，CC 台灣社群將開啟更寬廣的互動與參與模式
-        ，由開放文化基金會與其他關心開放授權發展的參與成員與合作夥伴，協力持續進
-        行 CC 社群在台灣與國際間的營運推廣與發聲對話。</p>
+      <p class="main-text" align="center" style="font-size: 18pt"><br><br><br>共創共享的理想正在呼喚<br><br>跟我們一起努力推動吧</p>
     </div>
   </div>
   <div class="d-flex clearfix main-bottom">
