--- a/index.html
+++ b/index.html
@@ -138,21 +138,21 @@ $(document).ready(function(){
   
   <div class="links d-inline-block align-top">
     <div class="icons d-inline-block">
-      <img src="sites/creativecommons.tw/files/community_icon.svg">
+      <a href="contact.html"><img src="sites/creativecommons.tw/files/community_icon.svg"></a>
       <div class="description">
         <h4 class="text-center icon-title">招募社群成員與夥伴</h4>
         <p>台灣 CC 社群將在此萌芽，歡迎加入一同關心開放授權的發展</p>
       </div>
   </div>
   <div class="icons d-inline-block align-top">
-      <img src="sites/creativecommons.tw/files/doc_icon.svg">
+      <a href="downloads.html"><img src="sites/creativecommons.tw/files/doc_icon.svg"></a>
       <div class="description">
         <h4 class="text-center icon-title">線上影音教材</h4>
         <p>精彩生動的線上教材與影片，帶你簡單了解 CC 授權領域</p>
       </div>
   </div>
   <div class="icons d-inline-block align-top">
-      <img src="sites/creativecommons.tw/files/speak_icon.svg">
+      <a href="contact.html"><img href="contact.html" src="sites/creativecommons.tw/files/speak_icon.svg"></a>
       <div class="description">
         <h4 class="text-center icon-title">演講邀約</h4>
         <p>我們可以協助幫您接洽合適的 CC 社群講師我們可以協助幫您接洽合適的 CC 社群講師</p>
