Fix color & typography

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ $(document).ready(function(){
   <div class="main d-flex">
     <img class="d-inline main-img col-8" src="sites/creativecommons.tw/files/think_of_eco.jpg">
     <div class="d-inline col-4 main-textblock">
-      <p class="main-text" align="center" style="font-size: 18pt"><br><br><br>共創共享的理想正在呼喚<br><br>跟我們一起努力推動吧</p>
+      <p class="main-text">共創共享的理想正在呼喚<br>跟我們一起努力推動吧。</p>
     </div>
   </div>
   <div class="d-flex clearfix main-bottom">
