--- a/files_club.html
+++ b/files_club.html
@@ -137,7 +137,7 @@
   </a>
   <a href="twcc.html">
       <div class="card">
-            <img class="card-img-top" src="sites/creativecommons.tw/files/">
+            <img class="card-img-top" src="sites/creativecommons.tw/files/cc.svg">
           <div class="card-body card-img-overlay">
               <p>關於台灣創用 CC 計畫</p>
           </div>
