--- a/files_club.html
+++ b/files_club.html
@@ -111,7 +111,7 @@
     </a>
     <a href="news.html">
         <div class="card">
-            <img class="card-img-top" src="sites/creativecommons.tw/files/">
+            <img class="card-img-top" src="sites/creativecommons.tw/files/old_news.svg">
             <div class="card-body card-img-overlay">
                 <p>舊聞新知</p>
             </div>
