--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ $(document).ready(function(){
    <div id="page">
 	<div class="wrapper">
    <div class="logo">
-          <a href="index.html" title="Home" rel="home" class="header__logo" id="logo"><img src="sites/creativecommons.tw/files/CC logo.png" alt="Home" class="header__logo-image" /></a>
+          <a href="index.html" title="Home" rel="home" class="header__logo" id="logo"><img src="sites/creativecommons.tw/files/CCcommunitylogo.png" alt="Home" class="header__logo-image" /></a>
     
           <div class="header__name-and-slogan" id="name-and-slogan">
                   <h1 class="header__site-name" id="site-name">
