Change banner image

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ $(document).ready(function(){
   </header>
   <div class="main-container">
   <div class="main d-flex">
-    <img class="d-inline main-img col-8" src="sites/creativecommons.tw/files/think_of_eco.jpg">
+    <img class="d-inline main-img col-8" src="sites/creativecommons.tw/files/banner.jpg">
     <div class="d-inline col-4 main-textblock">
       <p class="main-text">共創共享的理想正在呼喚<br>跟我們一起努力推動吧。</p>
     </div>
@@ -123,8 +123,7 @@ $(document).ready(function(){
   <div class="d-flex clearfix main-bottom">
   <div class="iframe d-inline-block">
     <h4 class="rss-title"><a href="https://groups.google.com/forum/#!forum/cctw-discussion" target="_blank">CC 社群授權討論室</a></h4>
-    <p class="rss-description">此為公開論壇，可先閱讀或搜尋論壇上過去的討論串，看是否有與您相似的問題，
-      若還有其他問題，可直接在論壇發問，熱心的社群成員們會一同參與討論與分享。
+    <p class="rss-description">此為公開論壇，看更多討論內容請直接到討論室<br><a href="https://groups.google.com/forum/#!forum/cctw-discussion">討論室連結</a>
     </p>
     <ul>
       <li>關於「轉載」使用條件問題</li>
@@ -140,22 +139,22 @@ $(document).ready(function(){
     <div class="icons d-inline-block">
       <a href="contact.html"><img src="sites/creativecommons.tw/files/community_icon.svg"></a>
       <div class="description">
-        <h4 class="text-center icon-title">招募社群成員與夥伴</h4>
-        <p>台灣 CC 社群將在此萌芽，歡迎加入一同關心開放授權的發展</p>
+        <a href="contact.html"><h4 class="text-center icon-title">招募夥伴</h4></a>
+        <p>加入社群，一同關心開放授權發展</p>
       </div>
   </div>
   <div class="icons d-inline-block align-top">
       <a href="downloads.html"><img src="sites/creativecommons.tw/files/doc_icon.svg"></a>
       <div class="description">
-        <h4 class="text-center icon-title">線上影音教材</h4>
-        <p>精彩生動的線上教材與影片，帶你簡單了解 CC 授權領域</p>
+        <a href="downloads.html"><h4 class="text-center icon-title">線上影音教材</h4></a>
+        <p>免費的 CC 教材與影片</p>
       </div>
   </div>
   <div class="icons d-inline-block align-top">
       <a href="contact.html"><img href="contact.html" src="sites/creativecommons.tw/files/speak_icon.svg"></a>
       <div class="description">
-        <h4 class="text-center icon-title">演講邀約</h4>
-        <p>我們可以協助幫您接洽合適的 CC 社群講師我們可以協助幫您接洽合適的 CC 社群講師</p>
+        <a href="contact.html"><h4 class="text-center icon-title">演講邀約</h4></a>
+        <p>我們幫你接洽 CC 社群講師</p>
       </div>
   </div> 
 
